--- a/model2.ipynb
+++ b/model2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPv9gphpogC77m5+dWf52s+",
+      "authorship_tag": "ABX9TyOGv9L21h9v/GDeDnNfICq/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -127,6 +127,51 @@
         "    n_epochs:int,\n",
         "    verbose:bool=True\n",
         "    ):\n",
+        "\n",
+        "  train_lem=len(training_loader.dataset)\n",
+        "  steps_per_eppoch=train_len/training_loader.batch_size\n",
+        "\n",
+        "  print(\"Running {} at {} steps per epoch \").format(n_epochs, steps_per_epoch)\n",
+        "\n",
+        "  train_acc=[]\n",
+        "  train_loss=[]\n",
+        "  val_acc=[]\n",
+        "  val_loss=[]\n",
+        "\n",
+        "  for epoch in range(n_epochs):\n",
+        "    epoch_train_loss=0\n",
+        "    epoch_train_acc=0\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "  def training_set(\n",
+        "      input: torch.tensor,\n",
+        "      label: torch.tensor,\n",
+        "      model: nn.Module,\n",
+        "      loss_fn: nn.Module,\n",
+        "      optimizer: optim.Optimizer):\n",
+        "\n",
+        "    input=input.to(device)\n",
+        "    label=label.to(device)\n",
+        "    output_batch=model(input)\n",
+        "    loss_batch=loss_fn(ouput_batch, label)\n",
+        "\n",
+        "    loss_batch.backward()\n",
+        "    optimizer.step()\n",
+        "    optimizer.zero_grad()\n",
+        "\n",
+        "    with torch.no_grad():\n",
+        "      batch_acc=accuracy(output_batch,label)\n",
+        "    # see loss_batch.item()\n",
+        "    return loss_batch,batch_acc\n",
+        "\n",
+        "\n",
+        "\n",
+        "  def validation_set():\n",
+        "\n",
+        "  return train_acc, train_loss, val_acc, val_loss\n",
         "\n",
         "\n"
       ],
