--- a/model2.ipynb
+++ b/model2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOGv9L21h9v/GDeDnNfICq/",
+      "authorship_tag": "ABX9TyPXZbTbY9QpS4LL9v2qtFoU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -169,14 +169,38 @@
         "\n",
         "\n",
         "\n",
-        "  def validation_set():\n",
+        "  def evaluate(\n",
+        "      model:nn.Module,\n",
+        "      dataloader:DataLoader,\n",
+        "      loss_fn:nn.Module):\n",
+        "    model.eval()\n",
+        "    size=len(dataloader.dataset)\n",
+        "    num_batches=len(dataloader)\n",
+        "    loss=0\n",
+        "    correct=0\n",
         "\n",
-        "  return train_acc, train_loss, val_acc, val_loss\n",
+        "    with torch.no_grad():\n",
+        "      for input,label in dataloader:\n",
+        "        input=input.to(device)\n",
+        "        label=label.to(device)\n",
+        "        prediction=model(input)\n",
+        "        val_loss=loss_fn(prediction,label)\n",
+        "        correct += (prediction.armax(axis=1)==label).type(torch.float).sum().item()\n",
+        "\n",
+        "    loss/=num_batches\n",
+        "    val_accuracy=correct/size\n",
+        "    return loss, val_accuracy\n",
+        "\n",
+        "  def accuracy(labels:torch.tensor,\n",
+        "               outputs:torch.tensor)=>torch.tensor:\n",
+        "               predictions=torch.argmac(outputs,axis=-1)\n",
+        "               matches=labels==predictions\n",
+        "               return matches.float().mean()\n",
         "\n",
         "\n"
       ],
       "metadata": {
-        "id": "_4ea0r6DReRO"
+        "id": "L_0XP60AOrhb"
       },
       "execution_count": null,
       "outputs": []
