--- a/model2.ipynb
+++ b/model2.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyOlN5BtDwZ72KrimX8ty1jm",
+      "authorship_tag": "ABX9TyPiM/x8LtZL9rns9kj94sBY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15,8 +13,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -61,30 +58,25 @@
         "test_dataset=datasets.MNIST(root='./data',train=False,download=True,transform=transform)\n",
         "\n",
         "# Data loaders\n",
-        "train_loader=DataLoader(train_dataset,batch_size=128,shuffle=True, drop_last=True, num_workers=5)\n",
-        "test_loader=DataLoader(test_dataset,batch_size=128,shuffle=False, num_workers=8)"
+        "train_loader=DataLoader(train_dataset,batch_size=128,shuffle=True, drop_last=True, num_workers=2)\n",
+        "test_loader=DataLoader(test_dataset,batch_size=128,shuffle=False, num_workers=2)\n",
+        "\n",
+        "print(int(len(train_loader.dataset)/train_loader.batch_size))"
       ],
       "metadata": {
         "id": "xg3eR8CzPpAD",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5893cb84-5a8a-4482-d24c-6bd3a1a47f48"
+        "outputId": "fbd00597-98f5-4aaf-e214-fe322526481d"
       },
-      "execution_count": 2,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stderr",
+          "name": "stdout",
           "text": [
-            "100%|██████████| 9.91M/9.91M [00:01<00:00, 5.04MB/s]\n",
-            "100%|██████████| 28.9k/28.9k [00:00<00:00, 65.9kB/s]\n",
-            "100%|██████████| 1.65M/1.65M [00:01<00:00, 1.28MB/s]\n",
-            "100%|██████████| 4.54k/4.54k [00:00<00:00, 6.32MB/s]\n",
-            "/usr/local/lib/python3.11/dist-packages/torch/utils/data/dataloader.py:624: UserWarning: This DataLoader will create 5 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.11/dist-packages/torch/utils/data/dataloader.py:624: UserWarning: This DataLoader will create 8 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
-            "  warnings.warn(\n"
+            "468\n"
           ]
         }
       ]
@@ -125,15 +117,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "75a9f826-d87c-41cd-8881-1a287dd85435"
+        "outputId": "9b06eb29-0b51-4643-e339-35e5d26b1ce7"
       },
-      "execution_count": 9,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Using cuda device\n",
+            "Using cpu device\n",
             "model =  Sequential(\n",
             "  (0): Flatten(start_dim=1, end_dim=-1)\n",
             "  (1): Linear(in_features=784, out_features=512, bias=True)\n",
@@ -142,8 +134,8 @@
             "  (4): ReLU()\n",
             "  (5): Linear(in_features=128, out_features=10, bias=True)\n",
             ")\n",
-            "Maximum weight before custom init:  tensor(0.0357, device='cuda:0')\n",
-            "Maximum weight after custom init tensor(0.0680, device='cuda:0')\n"
+            "Maximum weight before custom init:  tensor(0.0357)\n",
+            "Maximum weight after custom init tensor(0.0680)\n"
           ]
         }
       ]
@@ -177,7 +169,7 @@
         "\n",
         "\n",
         "  train_len=len(training_loader.dataset)\n",
-        "  steps_per_epoch = train_len/training_loader.batch_size\n",
+        "  steps_per_epoch = train_len//training_loader.batch_size\n",
         "\n",
         "  print(\"Running {} epochs at {} steps per epoch \".format(n_epochs,steps_per_epoch))\n",
         "\n",
@@ -237,9 +229,9 @@
         "    optimizer.zero_grad()\n",
         "\n",
         "    with torch.no_grad():\n",
-        "      batch_acc=accuracy(output_batch,label)\n",
+        "      batch_acc=accuracy(label,output_batch)\n",
         "    # see loss_batch.item()\n",
-        "    return loss_batch,batch_acc\n",
+        "    return loss_batch, batch_acc\n",
         "\n",
         "\n",
         "def evaluate(\n",
@@ -249,8 +241,7 @@
         "    model.eval()\n",
         "    size=len(dataloader.dataset)\n",
         "    num_batches=len(dataloader)\n",
-        "    loss=0\n",
-        "    correct=0\n",
+        "    loss,correct=0,0\n",
         "\n",
         "    with torch.no_grad():\n",
         "      for input,label in dataloader:\n",
@@ -258,7 +249,7 @@
         "        label=label.to(device)\n",
         "        prediction=model(input)\n",
         "        loss+=loss_fn(prediction,label)\n",
-        "        correct += (prediction.argmax(axis=1)==label).type(torch.float).sum().item()\n",
+        "        correct += (prediction.argmax(axis=1)==label).type(torch.float).sum()\n",
         "\n",
         "    loss/=num_batches\n",
         "    val_accuracy=correct/size\n",
@@ -273,7 +264,7 @@
       "metadata": {
         "id": "L_0XP60AOrhb"
       },
-      "execution_count": 10,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -284,41 +275,92 @@
       "metadata": {
         "id": "TA6a9PLrQ76t",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 369
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "70e90a3e-b885-468b-9bbd-7ffbd4178f1c"
+        "outputId": "cd4d2910-6066-487e-9017-e8a3603452f7"
       },
-      "execution_count": 11,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Running 25 epochs at 468.75 steps per epoch \n",
-            "Starting epoch 1... "
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.11/dist-packages/torch/utils/data/dataloader.py:624: UserWarning: This DataLoader will create 5 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.11/dist-packages/torch/utils/data/dataloader.py:624: UserWarning: This DataLoader will create 8 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "'float' object has no attribute 'item'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-11-fe9a6e69b94d>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmetrics\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss_fn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_epochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m25\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-10-1f76d158d268>\u001b[0m in \u001b[0;36mtrain_model\u001b[0;34m(model, loss_fn, optimizer, training_loader, validation_loader, n_epochs, verbose)\u001b[0m\n\u001b[1;32m     42\u001b[0m     \u001b[0mvalidation_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval_accuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mvalidation_loader\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mloss_fn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m     \u001b[0mval_acc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval_accuracy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m     \u001b[0mval_loss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalidation_loss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m     \u001b[0mtrain_acc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepoch_train_acc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'float' object has no attribute 'item'"
+            "Running 25 epochs at 468 steps per epoch \n",
+            "Starting epoch 1... Time taken: 14.004115915999591 seconds\n",
+            "\tTrain/val loss: 0.008577954465360181 / 0.06210579350590706\n",
+            "\tTrain/val accuracy: 0.9993656517094017 / 0.9807000160217285\n",
+            "Starting epoch 2... Time taken: 13.907658698999967 seconds\n",
+            "\tTrain/val loss: 0.00771361013996797 / 0.06166772544384003\n",
+            "\tTrain/val accuracy: 0.9995993589743589 / 0.9812999963760376\n",
+            "Starting epoch 3... Time taken: 14.138782378000087 seconds\n",
+            "\tTrain/val loss: 0.007134221703894675 / 0.062419354915618896\n",
+            "\tTrain/val accuracy: 0.9996494391025641 / 0.9817000031471252\n",
+            "Starting epoch 4... Time taken: 14.417706552999789 seconds\n",
+            "\tTrain/val loss: 0.00658716739460818 / 0.06260804831981659\n",
+            "\tTrain/val accuracy: 0.999732905982906 / 0.9811000227928162\n",
+            "Starting epoch 5... Time taken: 13.9489416790002 seconds\n",
+            "\tTrain/val loss: 0.006131560179259644 / 0.06264001131057739\n",
+            "\tTrain/val accuracy: 0.9997662927350427 / 0.98089998960495\n",
+            "Starting epoch 6... Time taken: 13.859612996999658 seconds\n",
+            "\tTrain/val loss: 0.005668919103152445 / 0.06285055726766586\n",
+            "\tTrain/val accuracy: 0.9997996794871795 / 0.9807999730110168\n",
+            "Starting epoch 7... Time taken: 14.144185358999948 seconds\n",
+            "\tTrain/val loss: 0.0053298948374954965 / 0.06291444599628448\n",
+            "\tTrain/val accuracy: 0.9998330662393162 / 0.9817000031471252\n",
+            "Starting epoch 8... Time taken: 13.862973583999974 seconds\n",
+            "\tTrain/val loss: 0.004890168382702634 / 0.06347565352916718\n",
+            "\tTrain/val accuracy: 0.9999165331196581 / 0.9812999963760376\n",
+            "Starting epoch 9... Time taken: 14.03497429800018 seconds\n",
+            "\tTrain/val loss: 0.004626371953850334 / 0.06405335664749146\n",
+            "\tTrain/val accuracy: 0.9998998397435898 / 0.9819999933242798\n",
+            "Starting epoch 10... Time taken: 13.86177504599982 seconds\n",
+            "\tTrain/val loss: 0.0043547682692475905 / 0.06283733993768692\n",
+            "\tTrain/val accuracy: 0.9999499198717948 / 0.9817000031471252\n",
+            "Starting epoch 11... Time taken: 14.262300070000038 seconds\n",
+            "\tTrain/val loss: 0.00406151274296268 / 0.06341582536697388\n",
+            "\tTrain/val accuracy: 0.9999499198717948 / 0.9814000129699707\n",
+            "Starting epoch 12... Time taken: 13.826222544000302 seconds\n",
+            "\tTrain/val loss: 0.003870230998433967 / 0.06332865357398987\n",
+            "\tTrain/val accuracy: 0.9999499198717948 / 0.9821000099182129\n",
+            "Starting epoch 13... Time taken: 13.819750842999838 seconds\n",
+            "\tTrain/val loss: 0.003629212767063863 / 0.06353204697370529\n",
+            "\tTrain/val accuracy: 0.9999666132478633 / 0.9818999767303467\n",
+            "Starting epoch 14... Time taken: 13.969217087000288 seconds\n",
+            "\tTrain/val loss: 0.003448091168006341 / 0.06430324912071228\n",
+            "\tTrain/val accuracy: 0.9999499198717948 / 0.9811999797821045\n",
+            "Starting epoch 15... Time taken: 14.203927890000159 seconds\n",
+            "\tTrain/val loss: 0.003273111143329531 / 0.06394490599632263\n",
+            "\tTrain/val accuracy: 0.9999499198717948 / 0.9819999933242798\n",
+            "Starting epoch 16... Time taken: 13.95627942100009 seconds\n",
+            "\tTrain/val loss: 0.003119689288537185 / 0.06390360742807388\n",
+            "\tTrain/val accuracy: 0.9999833066239316 / 0.9821000099182129\n",
+            "Starting epoch 17... Time taken: 13.91931987199996 seconds\n",
+            "\tTrain/val loss: 0.0029759346826512437 / 0.06395775824785233\n",
+            "\tTrain/val accuracy: 0.9999833066239316 / 0.9815999865531921\n",
+            "Starting epoch 18... Time taken: 13.947809210999822 seconds\n",
+            "\tTrain/val loss: 0.0028323462662291038 / 0.06445485353469849\n",
+            "\tTrain/val accuracy: 0.9999666132478633 / 0.9818999767303467\n",
+            "Starting epoch 19... Time taken: 14.007864036000228 seconds\n",
+            "\tTrain/val loss: 0.00271661667791036 / 0.06481225043535233\n",
+            "\tTrain/val accuracy: 0.9999833066239316 / 0.9818999767303467\n",
+            "Starting epoch 20... Time taken: 13.907432305999919 seconds\n",
+            "\tTrain/val loss: 0.002602697014146978 / 0.06521610915660858\n",
+            "\tTrain/val accuracy: 0.9999833066239316 / 0.9812999963760376\n",
+            "Starting epoch 21... Time taken: 13.855388052000308 seconds\n",
+            "\tTrain/val loss: 0.0024909490438846825 / 0.06476613879203796\n",
+            "\tTrain/val accuracy: 0.9999833066239316 / 0.9819999933242798\n",
+            "Starting epoch 22... Time taken: 13.801678939999874 seconds\n",
+            "\tTrain/val loss: 0.0023905782399795605 / 0.06531097739934921\n",
+            "\tTrain/val accuracy: 0.9999833066239316 / 0.9815000295639038\n",
+            "Starting epoch 23... Time taken: 13.88586336499975 seconds\n",
+            "\tTrain/val loss: 0.0023047248259511115 / 0.06539963185787201\n",
+            "\tTrain/val accuracy: 1.0 / 0.9818000197410583\n",
+            "Starting epoch 24... Time taken: 13.893240311000227 seconds\n",
+            "\tTrain/val loss: 0.002216745361436505 / 0.06520242244005203\n",
+            "\tTrain/val accuracy: 0.9999833066239316 / 0.9815999865531921\n",
+            "Starting epoch 25... Time taken: 13.841067805999955 seconds\n",
+            "\tTrain/val loss: 0.0021334187494308297 / 0.06584557145833969\n",
+            "\tTrain/val accuracy: 1.0 / 0.9819999933242798\n"
           ]
         }
       ]
